--- a/onyx-pkg.ini
+++ b/onyx-pkg.ini
@@ -3,11 +3,18 @@ name=perlin
 description=Very basic 3D Perlin noise sampling implementation
 url=git://onyxlang.io/repo/perlin
 author=Brendan Hansen
-version=0.1.0
+version=0.1.1
 
 [config]
 lib_source_directory=./lib
 lib_bin_directory=./bin
+run_cmd=
+debug_cmd=
+test_cmd=
+
+[native_library]
+build_cmd=
+library=
 
 [dependencies]
 
